✨ Operations resource (#25)
