# app/models/squeeze/account.rb
@@ -4,6 +4,7 @@ module Squeeze
   # Accounts model
   class Account < ApplicationRecord
     belongs_to :user
+    has_many :operations, dependent: :destroy
 
     enum kind: %i[bank_account cash credit_card debit_card]
   end
